--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       <!-- Have a great... -->
       <g transform="translate(10, 288)" class="msg-6">
         <rect width="210" height="42" rx="18.0355" />
-        <text x="15" y="27">open to collaborate</text>
+        <text x="15" y="27">Have a great day</text>
       </g>
     </svg>
 
